# dlitz 2020,2022
#
# See https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
#
# Usage: python3 -m build .

[metadata]
name = fuse-rsdos
version = 0.0.0
author = Darsey Litzenberger
author_email = dlitz@dlitz.net
#license = UNKNOWN
# See https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    #Operating System :: POSIX :: Linux
description = FUSE filesystem for Tandy Color Computer II RS-DOS disk filesystem
#long_description_content_type = text/markdown
#long_description =
#    Lorem ipsum ...
#    blah blah
#url='https://github.com/dlitz/...',

[options]
python_requires = >=3.9
#packages = find:
packages =
    fuse_rsdos
setup_requires =
    setuptools
install_requires =
    #commentjson
    #requests
    #requests-oauthlib

[options.package_data]
#dkapi = *.js
